fix btn alignement in the top nav menu

--- a/website/src/css/pages/_cloud-beta.scss
+++ b/website/src/css/pages/_cloud-beta.scss
@@ -37,10 +37,8 @@
             line-height: 1.625rem;
         }
     }
-    .cloud-beta-page__hero-and-header {
-        .btn {
-            margin-top: 30px;
-        }
+    .join-the-watilist-hero-btn {
+        margin-top: 30px;
     }
 
     ul {
